--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.8.0",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.11.1",
+    "react-scroll-to-top": "^3.0.0",
     "react-spinners": "^0.13.8",
     "react-tabs": "^6.0.1",
     "sort-by": "^1.2.0",
